# nimbus

./: README.md  io.github.danirabbit.nimbus.json  meson.build
data/: meson.build
po/: io.github.danirabbit.nimbus.pot  ru.po
src/: Application.vala  MainWindow.vala
